--- a/notebook/Agregate trees.ipynb
+++ b/notebook/Agregate trees.ipynb
@@ -326,9 +326,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "hackqc2018",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "hackqc2018"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
